# go2_control_interface

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  environment.yaml  git-deps.yaml  package.xml  setup.cfg  setup.py
config/: default_limits.yaml
examples/: custom_damping_mode.cpp
go2_control_interface/: go2_dds_env.py  robot_interface.py
go2_control_interface_common/: autodetect_network_if.py  autoset_environment_dds.py  shutdown_sportsmode.py  watchdog_node.py
go2_control_interface_cpp/include/: motor_crc.hpp
go2_control_interface_cpp/include/go2_control_interface_cpp/: motor_crc.hpp  robot_interface.hpp
go2_control_interface_cpp/src/: motor_crc.cpp  robot_interface.cpp
go2_control_interface_py/: robot_interface.py
go2_utils/: autodetect_network_if.py  autoset_environment_dds.py  shutdown_sportsmode.py
include/go2_control_interface/: robot_controller.hpp
include/go2_control_interface_cpp/: robot_interface.hpp
launch/: watchdog.launch.py
scripts/: damp_joint.py  measure_friction.py  sportsmode_shutdown.py  sportsmode_shutdown_service.py  watchdog.py
src/: motor_crc.cpp  robot_controller.cpp
